Wrong mailing list printing output : display name is duplicate into the primary email address.
Categories
(Thunderbird :: Address Book, defect)
Tracking
(thunderbird_esr78+ fixed, thunderbird84 fixed)
People
(Reporter: cmgaudry33, Assigned: cmgaudry33)
Details
Attachments
(1 file)
|
977 bytes,
patch
|
mkmelin
:
review+
wsmwk
:
approval-comm-beta+
wsmwk
:
approval-comm-esr78+
|
Details | Diff | Splinter Review |
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/86.0.4240.183 Safari/537.36
Steps to reproduce:
- Create an address book
- Add a new contact to this address book : set its display name and its primary email
- Create a mailling list into this address book
- Add the previous contact to the mailing list
- Print the mailing list
Actual results:
The contact appears to be "DISPLAY_NAME <DISPLAY_NAMEemail>" instead of "DISPLAY_NAME <email>".
Expected results:
The actual XML output is like this
<?xml-stylesheet type="text/css" href="chrome://messagebody/content/addressbook/print.css"?>
<directory>
<title xmlns="http://www.w3.org/1999/xhtml">Carnet d’adresses</title>
<GeneratedName>
My mailing list</GeneratedName>
<table><tr><td><section><labelrow><label>Display Name: </label><DisplayName>My mailing list</DisplayName></labelrow><labelrow><label>Nickname: </label><NickName>my mailing list</NickName></labelrow></section></td></tr><tr><td><section></section><section><sectiontitle>Description</sectiontitle><Notes>notes</Notes></section><section><sectiontitle>Addresses</sectiontitle><PrimaryEmail>
TRUMP Donald ( White House ) <TRUMP Donald ( White House )donald.trump@whitehouse.gov></PrimaryEmail>
<PrimaryEmail>
BIDEN Joe ( White House ) <BIDEN Joe ( White House )joe.biden@whitehouse.gov></PrimaryEmail>
</section></td><td><section></section><section></section></td></tr></table></directory>
It should be like this :
<?xml version="1.0"?>
<?xml-stylesheet type="text/css" href="chrome://messagebody/content/addressbook/print.css"?>
<directory>
<title xmlns="http://www.w3.org/1999/xhtml">Carnet d’adresses</title>
<GeneratedName>
My mailing list</GeneratedName>
<table><tr><td><section><labelrow><label>Display Name: </label><DisplayName>My mailing list</DisplayName></labelrow><labelrow><label>Nickname: </label><NickName>my mailing list</NickName></labelrow></section></td></tr><tr><td><section></section><section><sectiontitle>Description</sectiontitle><Notes>notes</Notes></section><section><sectiontitle>Addresses</sectiontitle><PrimaryEmail>
TRUMP Donald ( White House ) <donald.trump@whitehouse.gov></PrimaryEmail>
<PrimaryEmail>
BIDEN Joe ( White House ) <joe.biden@whitehouse.gov></PrimaryEmail>
</section></td><td><section></section><section></section></td></tr></table></directory>
| Assignee | ||
Comment 1•5 years ago
|
||
This fix can be applied to the daily version.
| Assignee | ||
Comment 2•5 years ago
|
||
This should be fixed in Thunderbird 78 also.
| Assignee | ||
Updated•5 years ago
|
Updated•5 years ago
|
Comment 3•5 years ago
|
||
Updated•5 years ago
|
Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/8fabcfa9fc2e
Fix Wrong mailing list printing output : display name is duplicate into the primary email address. r=mkmelin
Comment 5•5 years ago
|
||
Comment 6•5 years ago
|
||
Comment on attachment 9187366 [details] [diff] [review]
bug_1676859.diff
[Triage Comment]
Approved for beta
Comment 7•5 years ago
|
||
| bugherder uplift | ||
Thunderbird 84.0b2:
https://hg.mozilla.org/releases/comm-beta/rev/6c213054d1c4
Comment 8•5 years ago
|
||
Comment on attachment 9187366 [details] [diff] [review]
bug_1676859.diff
[Triage Comment]
Approved for esr78
Comment 9•5 years ago
|
||
| bugherder uplift | ||
Thunderbird 78.5.1:
https://hg.mozilla.org/releases/comm-esr78/rev/ab9928932b58
Description
•