Bug 1676859 - Fix Wrong mailing list printing output : display name is duplicate into the primary email address. r=mkmelin